packages/kotlin/ttrp-frontend/src/test/resources/corpus/ttr-pandas/accept/eq-synonym.ttrp
container c(in t, out result) target polars """pandas
t.filter(status == "open")
"""
