packages/kotlin/ttrp-frontend/src/test/resources/corpus/ttr-pandas/reject/TTRP-PD-001.ttrp
// expect: TTRP-PD-001
container c target polars """pandas
x.agg(total: sum(amount))
"""
